--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -60,10 +60,11 @@
     display: none;
 }
 
-@media screen and (max-width: 1100px) {
+@media screen and (max-width: 1168px) {
     .navbar-items {
         position: relative;
         min-width: 280px;
+        z-index: 2;
     }
     .nav-links{
         background-color: #363c45;
@@ -79,7 +80,7 @@
         display: flex;
         flex-direction: column;
         width: 100%;
-        height: 400px;
+        max-height: 400px;
         position: absolute;
         top: 80px;
         background-color: #363c45;
@@ -115,7 +116,7 @@
         background-color: #2a2e35;
         top: 0;
         right: 0;
-        transform: translate(-100%, 90%);
+        transform: translate(-110%, 100%);
         font-size: 1.6rem;
         cursor: pointer;
     }
